--- a/server/public/index.html
+++ b/server/public/index.html
@@ -80,7 +80,7 @@
                 HR Open Skills Proficiency API
             </h1>
             <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                The first open, comprehensive standard for representing skills proficiency data across HCM, assessment, learning, and talent platforms.
+                The first open, comprehensive standard for representing skills proficiency data across HCM, assessment, learning, and talent platforms. Compatible with leading digital credentials (OB3.0, CLR2.0).
             </p>
             <div class="mt-4 mb-6 space-y-2">
                 <div>
