--- a/server/public/index.html
+++ b/server/public/index.html
@@ -136,7 +136,7 @@
                         <div class="bg-gradient-to-br from-green-50 to-teal-50 p-6 rounded-xl skill-card border border-green-100">
                             <div class="text-3xl mb-3">🤝</div>
                             <h3 class="text-lg font-bold text-gray-900 mb-2">Complementary</h3>
-                            <p class="text-gray-600 text-sm">Works alongside JEDx, Open Badges, CLR, CTDL, and other standards</p>
+                            <p class="text-gray-600 text-sm">Works alongside JEDx, Open Badges, CLR, CASE CTDL, and other standards</p>
                         </div>
                     </div>
                 </div>
